--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.6.0",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.entities": "1.3.8",
     "com.unity.feature.development": "1.0.1",
     "com.unity.postprocessing": "3.4.0",
